# neo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.rst  TODO  TODO.rst  main.c  neo.c
.github/: FUNDING.yml
client/: Makefile  cli.c  demo.xml  gtknode.c  gtknodesocket.c  gtknodeview.c  img.py
client/include/: gtknode.h  gtknodesocket.h  gtknodeview.h  node_binary_decode.h  node_binary_encode.h  node_bitwise_and.h  node_bitwise_not.h  node_bitwise_or.h  node_bitwise_xor.h  node_convert_number.h  node_pulse.h  node_show_number.h  node_step.h  nodes_common.h
client/nodes/: node_binary_decode.c  node_binary_encode.c  node_bitwise_and.c  node_bitwise_not.c  node_bitwise_or.c  node_bitwise_xor.c  node_convert_number.c  node_pulse.c  node_show_number.c  node_step.c
etc/: neo.cfg  neo.json
include/: config.h  config.h.in  db.h  environ.h  linux.h  neo.h  neuron.h  utils.h  worker.h
neurons/: CMakeLists.txt  demo.py  dummy.c  python.tpl  sample.c  test.c
res/: client.tar.xz  rte.tar.xz
samples/: Makefile  epoll-demo-2.c  epoll-demo.c  mysql.c  udp-client.c  udp-server.c  unix_client.c  unix_server.c  xxhash64.h
src/: neo.c  neuron.c  pulse.c  worker.c
src/inc/: config.h.in  pulse.h
utils/: linux.c
